--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "baya_server",
-  "version": "1.0.0",
-  "description": "BAYA Gallery sales agent server (simplified demo)",
+  "name": "baya-agent",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "start": "node server/index.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
   }
 }
